SalesforceGarage/src/objects/QBO_Payment__c.object
<CustomObject>
    <fields>
        <fullName>QBO_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QBO_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>QBO_Payment_Method__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QBO_Payment_Reference_Number__c</fullName>
        <label>Payment Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QBO_Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QBO_Payment_Reference_Number__c</columns>
        <columns>QBO_Total_Amount__c</columns>
        <columns>QBO_Payment_Method__c</columns>
        <columns>QBO_Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QBO Payment Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>